--- a/style.css
+++ b/style.css
@@ -13,12 +13,9 @@ body {
     color: #333
 }
 
-a {
-    color: darkmagenta;
-    text-decoration: none;
-}
 
 /* Picture of creator */
+
 p img {
     padding: 12px 12px 12px 12px;
     border-radius: 20%;
@@ -28,14 +25,15 @@ p img {
 }
 
 h2 {
+    font-size: 20px;
     color: darkorchid;
     text-decoration: underline ;
 }
 
 
-
 h1 {
-    color: blueviolet;
+    color: darkorchid;
+    font-size: 20px;
 }
 /* Navbar */
 
@@ -64,7 +62,7 @@ h1 {
     text-decoration: none;
     color:hotpink;
     align-items: right;
-    padding: 0.5rem;
+    padding: 0.2rem;
     margin: 0 0.5rem;
     border-radius: 5px;
     transition: background-color 0.2sec;
@@ -76,6 +74,7 @@ h1 {
 }
 
 /* Background image */
+
 #subheader {
     /* background-image: url("./images/nameoffile.jpg"); */
     background-image: url("./images/gradient.jpg");
@@ -85,14 +84,9 @@ h1 {
 }
 
 
-main {
-    width: 75%;
-    display: inline-block;
-    margin-left: 50px;
+/* images to deployed work  */
 
-}
-
-.galler-links-h2 {
+.gallery-links-h2 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 28px;
     font-weight: 600;
@@ -116,26 +110,42 @@ main {
     width: 100%;
 }
 
-#work {
-    border: 2px solid rgb(255, 0, 149);  
+
+#Work {
+    border: 5px solid rgb(255, 0, 149);  
 }
 
-#aboutme {
-    border: 2px solid color rgb(255, 0, 149);
+#about-me {
+    border: 5px solid color rgb(255, 0, 149);
 }
 
 #contact {
-    border: 2px solid rgb(255, 0, 149);
-}
- 
- 
-
-section ul li {
-    display: inline-block;
-    margin-left: 100px;
-    text-decoration: underline;
+    border: 5px solid rgb(255, 0, 149);
 }
 
+/* Contact links */
+
+.contact-links ul{
+    display: flex;
+    list-style: none;
+    margin-left: auto;
+    margin-right: 0;
+    justify-content: space-evenly 
+}
+
+.contact-links ul li a{
+    
+    text-decoration: none;
+    color: darkorchid;
+    padding: 0.1rem;
+    margin: 0 0.5rem;
+    border-radius: 5px;
+    transition: background-color 0.2sec;
+}
+
+.contact-links li a:hover {
+        background-color:lightpink;
+}
 
 
 @media only screen and (min-width: 762px) {
@@ -145,3 +155,9 @@ section ul li {
 .gallery-img{
     flex-basis: 300px;
 }
+
+footer {
+    text-align: center;
+    padding: 20px;
+}
+
