updates to css and modified html

--- a/style.css
+++ b/style.css
@@ -10,79 +10,78 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5;
-    color: #333
+    color: #333;
+    background-color: white;
+}
+
+body, html {
+    width: 100%;
+    height: 100%;
 }
 
 
 /* Picture of creator */
 
 p img {
+    display: flex;
     padding: 12px 12px 12px 12px;
     border-radius: 20%;
     max-width: 225px; 
     float: left;
       
 }
+/* Headers */
 
-h2 {
+header {
+    font-family: "Sofia", sans-serif;
+    font-size: 30px;
+    text-shadow: 3px 3px 3px #ababab;
+    color: darkorchid;
+    
+}
+
+h1 {
     font-size: 20px;
     color: darkorchid;
     text-decoration: underline ;
 }
 
+/* Navigation bar */
 
-h1 {
-    color: darkorchid;
-    font-size: 20px;
-}
-
-/*  
-.header {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    background-image: url(images/backdrop.jpg);
-    background: cover;
-    background-repeat: repeat;
-}
-*/
-/* Navbar */
-
-#navbar {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 10px 10px 10px;
-    background: #ffff;
+ #navbar { 
+    background-color: white;
     position: fixed;
-    width: 100%;
     z-index: 2;
     top: 0;
-    border-bottom: 4px solid palevioletred;
-
+    width: 100%;
 }
 
 #navbar ul {
+    padding: 5px;
     display: flex;
+    justify-content: center;
     list-style: none;
-    margin-left: auto;
-    margin-right: 0;
+    padding: 0.1rem;
+    margin: 0 0.5rem;
+    
+}
 
+#navbar ul li {
+    padding: 10px 10px 10px 10px;  
 }
 
 #navbar ul li a {
     text-decoration: none;
-    color:hotpink;
-    align-items: right;
-    padding: 0.2rem;
-    margin: 0 0.5rem;
-    border-radius: 5px;
-    transition: background-color 0.2sec;
-
+    font-size: 18px;
+    color: hotpink;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-#navbar li a:hover {
-    background-color:lightpink;
+#navbar ul li a:hover {
+    background-color: lightpink;
+    transition: 0.5s;
 }
+
 
 /* Background image */
 
@@ -90,20 +89,7 @@ h1 {
     /* background-image: url("./images/nameoffile.jpg"); */
     background-image: url("./images/gradient.jpg");
     padding: 40px 40px 40px 40px;
-    margin-top: 60px;
-
-}
-
-
-/* images to deployed work  */
-
-.gallery-links-h2 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 28px;
-    font-weight: 600;
-    color: #111;
-    text-align: center;
-    padding: 20px;
+    margin-top: 40px;
 
 }
 
@@ -111,47 +97,88 @@ h1 {
     display: flex;
     flex-flow: row wrap;
     justify-content:space-between;
-    
+    padding: 20px;
 }
 
-.gallery-img {
-    flex-basis: 400px;
-     margin: 10px 10px;
+/* images in work gallery  */
 
-}
-.gallery-img img {
-    height: 250px;
-    width: 500px;
-    margin-right:40px;
-    object-fit:contain;
-}
 
-.gallery-img-big img {
-    height: 350px;
-    width: 350px;
-    margin-right: 40px;
-    object-fit:contain;
-    
-}
-
-/* text on images of my work */
-
-.text-wrapper {
+ .gallery-img1 {
+    position: relative; 
     width: 100%;
-    position: relative;
-    margin-top: -13%;
-    background-size: 100%;
-}
+   
+    
+ }
 
-.text-wrapper h3 {
-text-align:center;
-color: deeppink;
-font-size: 14px;
-}
+ .gallery-img1 img {
+    height: 350px;
+    width: 250px;
+    margin-right: 40px;
+    border-radius: 50%;
+    object-fit:contain;
+    
+ }
+
+ .gallery-img2 {
+    position: relative; 
+    width: 100%;
+    
+ }
+
+ .gallery-img2 img {
+    height: 250px;
+    width: 250px;
+    margin-right: 40px;
+    border-radius: 50%;
+    object-fit:contain;
+    display: block;
+ }
+
+ .gallery-img3 {
+    position: relative; 
+    width: 100%;
+    
+ }
+
+ .gallery-img3 img {
+    height: 250px;
+    width: 250px;
+    margin-right: 40px;
+    border-radius: 50%;
+    object-fit:contain;
+    display: block;
+ }
+
+ .gallery-img4 {
+    position: relative; 
+    width: 100%;
+    
+ }
+
+ .gallery-img4 img {
+    height: 250px;
+    width: 250px;
+    margin-right: 40px;
+    border-radius: 50%;
+    object-fit:contain;
+    display: block;
+ }
 
 
-#Work {
-    border: 5px solid rgb(255, 0, 149);  
+/* text on images in work gallery */ 
+
+ h3{
+    position: absolute;
+    top: 100px;
+    left: -10% ;
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
+    color: black;
+ }
+
+ #Work {
+    border: 2px solid crimson;
 }
 
 
@@ -160,44 +187,77 @@ font-size: 14px;
 }
 
 #contact {
-    border: 5px solid color rgb(255, 0, 149);
+    border: px solid color rgb(255, 0, 149);
 }
 
-/* Contact links */
+.contact-links { 
+    background-color: white;
+    width: 100%;
+}
 
-.contact-links ul{
+/* Contact links  */
+
+.contact-links ul {
+    padding: 5px;
     display: flex;
+    justify-content: center;
     list-style: none;
-    margin-left: auto;
-    margin-right: 0;
-    justify-content: space-evenly 
-}
-
-.contact-links ul li a{
-    
-    text-decoration: none;
-    color: darkorchid;
     padding: 0.1rem;
     margin: 0 0.5rem;
-    border-radius: 5px;
-    transition: background-color 0.2sec;
 }
 
-.contact-links li a:hover {
-        background-color:lightpink;
+.contact-links ul li {
+    padding: 10px 10px 10px 10px;  
+}
+
+.contact-links ul li a {
+    text-decoration: none;
+    font-size: 18px;
+    color: hotpink;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.contact-links ul li a:hover {
+    background-color: lightpink;
+    transition: 0.5s;
 }
 
 
-@media only screen and (min-width: 762px) {
-.gallery-links-h2 {
-    font-size: 28px;
-}
-.gallery-img{
-    flex-basis: 300px;
-}
+/* Footer  */
 
 footer {
     text-align: center;
     padding: 20px;
+    color: rgb(255, 0, 149);
 }
 
+
+@media (max-width: 500px) {
+        #navbar ul {
+            height: 160px;
+            flex-direction: column;
+            text-align: center;
+
+    }
+
+@media (max-width: 500px) {
+        #subheader {
+            height: 160px;
+            
+
+    }   
+
+    @media (max-width: 500px) {
+        #subheader {
+            height: 160px;
+            
+
+    }   
+
+    @media (max-width: 500px) {
+        .contact-links ul {
+            height: 160px;
+            flex-direction: column;
+            text-align: center;
+
+    }
