--- a/style.css
+++ b/style.css
@@ -223,16 +223,20 @@ footer {
         height: auto;
           }
             
-        
+         @media (max-width: 700px) {
+        .gallery-links div a{
+          flex-basis: 150px;
+          height: 250px;
+          position: relative;
+          margin: 30px; 
+        }   
 
         @media (max-width: 700px) {
-            .gallery-links div a{
-                display: flex;
-                flex-direction: column;
+        .gallery-links a:first-of-type {
+         flex-basis: 150px;
+         height: 250px;
+          position: relative;
+          margin: 30px; 
             }
-
-            @media (max-width: 700px) {
-                .contact-links h3{
-                    overflow: hidden;
-                }
+          
                    
