--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body, html {
 
 .aboutMe{
     font-family: 'Montserrat', sans-serif;
+    background-color: #e6e6e6;
 }
 
 .portfolio-hero-header {
@@ -103,48 +104,19 @@ body, html {
     padding-right: 1.875rem;
   }
 
-img{
-    height: 100%; 
-     width: 100%; 
-     object-fit:cover; 
+ .image{
+
+  width: auto ;
+  object-fit: cover;
+} 
+
+.card{
+  box-shadow: #333;
+  background-color: #e6e6e6;
 }
 
-
-/* links to deployment of work */
-
-
-/* Images of pictures of deployments */
-
- /* .gallery-links img {
-    height: 100%; 
-     width: 100%; 
-     object-fit:cover; 
-    
- }
-
- .gallery-links a:first-of-type {
-    flex-basis: 425px;
-    
- } */
-
-
- /*  header on deployment pictures */
-
-/* .gallery-links h3{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    text-align: center;
-    font-size: 16px;
-    color:#ffff;
-    height: 32px;
-    line-height: 32px;
-    background-color: rgb(228, 61, 178, 0.25);
-} */ 
-
-
-
+ 
+ 
 footer {
     text-align: center;
     padding: 20px;
@@ -153,58 +125,24 @@ footer {
     background-color: #e6e6e6;
 }
 
-/* Media Query
+@media screen and (max-width: 639px) {
 
-@media (max-width: 500px) {
-        #navbar ul {
-            height: 160px; 
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-
-    }
+}.card {
+  display: flex;
+  flex-direction: column;
 }
 
-@media (max-width: 700px) {
-        #subheader {
-             height: 160px; 
-    }   
+@media screen and (max-width: 639px) {
 
+}.aboutme{
+  display: flex;
+  flex-direction: column;
 }
 
-    @media (max-width: 700px) {
-        .contact-links ul {
-            height: 160px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
+/* @media screen and (min-width: 320px) {
 
-    }
+}.portfolio-hero-header-menu{
+  display: flex;
+  flex-direction: column;
 } */
-
-     /* @media (max-width: 700px) { 
-        .gallery-links img { 
-        display: flex; 
-        flex-direction:column;
-        width: 150px;
-        height: auto;
-          }
-            
-         @media (max-width: 700px) {
-        .gallery-links div a{
-          flex-basis: 150px;
-          height: 250px;
-          position: relative;
-          margin: 30px; 
-        }   
-
-        @media (max-width: 700px) {
-        .gallery-links a:first-of-type {
-         flex-basis: 150px;
-         height: 250px;
-          position: relative;
-          margin: 30px; 
-            }
-        }
-           */
-         
+ 
